--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
             exploration and exploitation in personalizing recommendations.
         </p>
         <p>
-            📄 <a href="Kathryn_Cruz_Comp_Final.pdf" target="_blank">Read the full paper (PDF)</a>
+            📄 <a href="Kathryn_Cruz_Comp.pdf" target="_blank">Read the full paper (PDF)</a>
         </p>
     </div>
 
