Fixed pdf download

--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,8 @@
             exploration and exploitation in personalizing recommendations.
         </p>
         <p>
-            📄 <a href="Kathryn_Cruz_Comp.pdf" target="_blank">Read the full paper (PDF)</a>
+            <a class="download-btn" href="Kathryn_Cruz_Comp.pdf" download>
+            📄 Read the Full Paper Here (PDF)
         </p>
     </div>
 
